syntax="proto3";

package pb;

import "google/api/annotations.proto";

option go_package="Email/pb/grpc_server";

message SignUpRequest {
    string email = 1;
    string situation = 2;
}

message SignUpResponse {
    string message = 1;
}

message VerifyEmailRequest {
    string email = 1;
    string verification_code = 2;
}

message VerifyEmailResponse {
    string message = 1;
}

service Email {
    rpc SendEmail (SignUpRequest) returns (SignUpResponse) {
        option(google.api.http) = {
            post : "/signup"
            body : "*"
        };
    }

    rpc VerifyEmail (VerifyEmailRequest) returns (VerifyEmailResponse) {
        option(google.api.http) = {
            post : "/verify"
            body : "*"
        };
    }
}
